fix(TabItem): fix focus overflowing issue

--- a/packages/bezier-react/src/components/Tabs/Tabs.module.scss
+++ b/packages/bezier-react/src/components/Tabs/Tabs.module.scss
@@ -28,7 +28,6 @@ $tab-item-indicator-height: 3px;
 }
 
 .TabItems {
-  overflow: hidden;
   display: flex;
 }
 
@@ -41,7 +40,7 @@ $tab-item-indicator-height: 3px;
 
     position: absolute;
     right: 1px;
-    bottom: -8px;
+    bottom: calc(-8px + $tab-item-indicator-height);
     left: 1px;
 
     height: 0;
